--- a/index.html
+++ b/index.html
@@ -25,11 +25,63 @@
             <div class="modal-content">
                 <div class="modal-header offcanvas-header">
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div> 
+                </div>
+                <!-- offcanvas-form-wrap end -->
+                <!-- offcanvas-menu start -->
+                <nav id="offcanvas-menu" class="offcanvas-menu">
+                    <ul>
+                        <li>
+                            <a href="index.html">Inicio</a>
+                            <!-- add your sub menu here -->
+                        </li>
+                        
+                        <li>
+                            <a href="javascript:void(0)">Producto</a>
+                            <ul>
+                                <li>
+                                    <a href="#">Bancos y Centrales de Credito</a>
+                                </li>
+                                <li>
+                                    <a href="#">Empresa</a>
+                                </li>
+                                <li>
+                                    <a href="#">Micro-Empresa</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="javascript:void(0)">Servicio</a>
+                            <ul>
+                                <li><a href="#">Servicios para Micro-Empresas</a></li>
+                                <li><a href="#">Servicio de pago</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="contact-us.html">Contactanos</a>
+                        </li>
+                    </ul>
+
+                    <div class="offcanvas-social">
+                        <ul>
+                            <li>
+                                <a href="#"><i class="icofont-facebook"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="icofont-instagram"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="icofont-whatsapp"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="icofont-linkedin"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+                <!-- offcanvas-menu end -->
             </div>
         </div>
     </div>
-
     <header class="header">
 
         <div id="active-sticky" class="header-bottom">
