--- a/servicio.html
+++ b/servicio.html
@@ -290,7 +290,7 @@
                     <div class="case-clients-card-inner">
                         <div class="case-details-row">
                             <div class="case-details-col">
-                                <h3 class="title text-center">Comprometerse. Excitar. Autorizar. Ampliar.</h3>
+                                <h3 class="title text-center">Comprometerse, Excitar, Autorizar y Ampliar.</h3>
                                 
                                 <p>Las instituciones financieras se encuentran en la intersección de los mundos físico y digital. Aproveche las oportunidades que surgen en el mundo del comercio conectado y vea cómo puede involucrar y entusiasmar a sus clientes mientras fortalece y amplía su negocio.</p>
                             </div>
