--- a/public/index.html
+++ b/public/index.html
@@ -360,7 +360,8 @@
                   <div class="hero-content">
                       <h1 class="title font-extrabold text-blue-900 dark:text-white">Moderno e Innovador</h1>
                       <p class="text-gray-400">
-                          <span class="hr d-none d-xl-block"></span>Ayudamos a empresas  implementando soluciones de pagos digitales.</p>
+                          <span class="hr d-none d-xl-block"></span>Desarrolladores Tecnologías financieras
+                          Hace la vida más fácil.</p>
                       <form action="#" class="hero-form position-relative">
                           <input class="form-control" type="text" placeholder="Escribe tu Email...">
                           <button class="btn border-0 text-white hover:text-white bg-gradient-to-r from-yellow-400 to-orange-400 hover:from-yellow-500 hover:to-orange-500 font-semibold px-8 py-4 rounded-md">Suscribete Ya!</button>
